tests/error/output_errors/state_output_duplicates.err
Error: Copy violation (at $FILE:8:28)
  | 
6 | def main() -> None:
7 |     q1 = qubit()
8 |     state_output("tag", q1, q1)
  |                             ^^ Variable `q1` with non-copyable type `qubit` cannot be
  |                                borrowed ...

Note:
  | 
7 |     q1 = qubit()
8 |     state_output("tag", q1, q1)
  |                         -- Variable `q1` already borrowed here

Guppy compilation failed due to 1 previous error
